Port config GUI to 1.21.11 render pipeline (functional checkpoint)
Full 1.21->1.21.11 port: custom RenderPipelines (custom_tint, color_wheel),
TestModel as WrapperBlockStateModel, retargeted fire/overlay mixins, sprite
generation, and the config GUI on the new DrawContext/special-element APIs.
Core features verified in-game. Known issue: config-screen fire preview renders
white (fixed in follow-up) — committing here as a working checkpoint first.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>